@@ -18,3 +18,4 @@ sv.gmo
 sk.gmo
 fi.gmo
 it.gmo
+da.gmo
